<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Senorita Provider</string>
    <string name="skip">تخطي</string>
    <string name="next">التالي</string>
    <string name="best_offers">أفضل العروض</string>
    <string name="intro_1_text">احصل معنا علي أفضل العروض التي لن\n تجدها في مكان آخر</string>
    <string name="miss_offer">لن يفوتك العرض</string>
    <string name="discounts">خصومات حقيقيه</string>
    <string name="intro_2_text">اشعارات فورية بأهم العروض\nالمتوفرة لدينا من أماكنك المفضله</string>
    <string name="intro_3_text">يمكنك الحصول علي خصومات حقيقيه من\nخلال التطبيق</string>
    <string name="login">تسجيل الدخول</string>
    <string name="name">الاسم</string>
    <string name="password">كلمة المرور</string>
    <string name="forgot_password">نسيت كلمة المرور؟</string>
    <string name="or">او</string>
    <string name="register_now">ليس لديك حساب؟<font color="#89182C">سجل الآن</font></string>
    <string name="registration">تسجيل حساب</string>
    <string name="email_address">البريد الالكتروني</string>
    <string name="phone_number">رقم الجوال</string>
    <string name="confirm_password">تأكيد كلمة المرور</string>
    <string name="terms_and_coditions">بالنقر فوق \"تسجيل\" للموافقة علي\n بنود الخدمة وخصوصية السياسة</string>
    <string name="register">تسجيل حساب</string>
    <string name="have_account">هل لديك حساب؟<font color="#89182C">تسجيل دخول</font></string>
    <string name="test_name">معاذ محسن</string>
    <string name="departments">الأقسام</string>
    <string name="my_reservations">حجوزاتي</string>
    <string name="language">اللغه</string>
    <string name="settings">الإعدادات</string>
    <string name="share_application">مشاركة التطبيق</string>
    <string name="terms_and_conditions">الشروط والاحكام</string>
    <string name="privacy_policy">سياسة الخصوصيه</string>
    <string name="call_us">اتصل بنا</string>
    <string name="about_us">نبذة عنا</string>
    <string name="home">الرئيسية</string>
    <string name="favorite">المفضلة</string>
    <string name="scan_barcode">امسح الكود</string>
    <string name="notifications">الاشعارات</string>
    <string name="profile">بروفايل</string>
    <string name="search">بحث</string>
    <string name="test_notification">هناك حقيقة مثبته منذ زمن طويل</string>
    <string name="save">حفظ</string>
    <string name="new_notification">اشعار جديد</string>
    <string name="logout">تسجيل الخروج</string>
    <string name="more">المزيد</string>
    <string name="featured_offers">العروض المميزه</string>
    <string name="message">الرسالة</string>
    <string name="send">ارسال</string>
    <string name="clinic_name">مقدم الخدمه</string>
    <string name="department">القسم المختص</string>
    <string name="location">العنوان</string>
    <string name="select_date">اختار اليوم المناسب</string>
    <string name="select_time">اختار الموعد المناسب</string>
    <string name="user_number_error">ادخل رقم العميل</string>
    <string name="promo_code">كود الخصم</string>
    <string name="reserve_now">احجز الآن</string>
    <string name="reservations">حجوزات</string>
    <string name="reservation_number">رقم الحجز</string>
    <string name="rating">التقييم</string>
    <string name="reservation_confirmed">تم تأكيد الحجز</string>
    <string name="offers">العروض</string>
    <string name="add_provider_request">طلب اضافة مقدم خدمه</string>
    <string name="provider_name">مقدم الخدمه</string>
    <string name="address_and_information_of_provider">عنوان وبيانات مقدم الخدمه</string>
    <string name="add_request">طلب اضافه</string>
    <string name="enter_your_name">ادخل اسمك</string>
    <string name="enter_phone">ادخل رقم الجوال</string>
    <string name="enter_message">ادخل الرساله</string>
    <string name="success">تم الارسال بنجاح</string>
    <string name="error">خطأ من فضلك اعد المحاوله</string>
    <string name="email_not_valid">البريد الالكتروني غير صحيح</string>
    <string name="phone_not_valid">رقم الهاتف يجب الا يكون فارغ و 10 ارقام</string>
    <string name="password_not_valid">كلمة المرور لا يجب ان يكون فارغ واكثر من 6 حروف</string>
    <string name="password_match_error">كلمة المرور غير متطابقه</string>
    <string name="please_login">من فضلك قم بتسجيل الدخول</string>
    <string name="waiting_confirmation">في انتظار التأكيد</string>
    <string name="confirmed">تم تأكيد</string>
    <string name="visit_completed">تم الزيارة</string>
    <string name="visit_not_completed">لم يتم الزياره</string>
    <string name="canceled">تم الالغاء</string>
    <string name="no_notifications">لا يوجد اشعارات</string>
    <string name="no_reservations">لا يوجد حجوزات</string>
    <string name="edited">تم التعديل بنجاح</string>
    <string name="no_offers">لا يوجد عروض</string>
    <string name="add_clinic">اضافة مقدم خدمه</string>
    <string name="enter_provider_name">ادخل اسم العياده</string>
    <string name="enter_address">ادخل العنوان</string>
    <string name="enter_provider_phne">ادخل رقم الهاتف</string>
    <string name="no_favorites">لا توجد مفضله</string>
    <string name="verify">تفعيل</string>
    <string name="verification_code">كود التفعيل</string>
    <string name="mobile_verification">تفعيل رقم الهاتف</string>
    <string name="code_not_valid">الكود غير صحيح</string>
    <string name="enter_code">ادخل كود التفعيل</string>
    <string name="not_verified">لم يتم التفعيل</string>
    <string name="permission_denied">تم رفض اذن الكاميرا</string>
    <string name="enter_review">ادخل تقييمك</string>
    <string name="rate_valid">يجب ان يكون علي الاقل نجمه واحده</string>
    <string name="your_rate">تقييمك</string>
    <string name="what_is_your_rate">ماهو تقييمك؟</string>
    <string name="leave_comment">اترك تعليق</string>
    <string name="rate">قيم</string>
    <string name="change_password">تغيير كلمة المرور</string>
    <string name="one_filter">اختار تصنيف واحد علي الاقل</string>
    <string name="more_categories">مزيد من الاقسام</string>
    <string name="exchange_points">تبادل النقاط</string>
    <string name="more_offers">مزيد من العروض</string>
    <string name="share_offer">شارك العرض</string>
    <string name="book_offer">احجز العرض</string>
    <string name="offer_number">رقم العرض</string>
    <string name="filter_search_results">تصفية نتائج البحث</string>
    <string name="provider_search">تصفية نتائج البحث</string>
    <string name="search_by_category">البحث بالقسم</string>
    <string name="search_by_offer_number">البحث برقم العرض</string>
    <string name="search_offer_number">ادخل رقم العرض</string>
    <string name="search_for_offer">ابحث عن عرض</string>
    <string name="choose_category">اختر القسم</string>
    <string name="choose_provider">اختر مقدم الخدمه</string>
    <string name="search_for_offers">ابحث عن عروض</string>
    <string name="show_provider">عرض مقدم الخدمه</string>
    <string name="offer_booked">تم حجزه</string>
    <string name="check_promocode">تحقق من كود الخصم</string>
    <string name="enter_promo_code">ادخل كود الخصم</string>
    <string name="points">النقاط</string>
    <string name="delete">حذف الطلب</string>
    <string name="intro_1">تصفح واحجز افضل العروض الحصرية</string>
    <string name="intro_2">يمكنك الان حجز الميعاد المناسب في ثواني</string>
    <string name="intro_3">امسح الكود لدي مقدم الخدمة لاثبات حضورك واحصل علي نقاط</string>
    <string name="intro_4">تلقي اشعارات باجدد العروض الحصرية</string>
    <string name="confirm_reservation">سيتم الاتصال بك في اقرب وقت لتأكيد معاد الحجز\nرقم الحجز : </string>
    <string name="thank_you_for_using">شكرا لأستخدامك تطبيق سينيوريتا</string>
    <string name="go_home">العوده للرئيسيه</string>
    <string name="password_changed_successfully">تم تغيير كلمة المرور بنجاح</string>
    <string name="show_location">اظهر العنوان</string>
    <string name="show_offers">العروض</string>
    <string name="time">مره</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>