<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:clipToPadding="false"
        android:clipChildren="false"
        android:background="@android:color/white"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/imageView36"
            android:layout_width="match_parent"
            android:layout_height="380dp"
            android:src="@drawable/im_offer_test"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView36">

            <View
                android:layout_width="3dp"
                android:layout_height="match_parent"
                android:background="@color/colorPrimary" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingBottom="5dp">

                <TextView
                    android:id="@+id/textView8"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_marginEnd="5dp"
                    android:ellipsize="end"
                    android:gravity="start|center_vertical"
                    android:text="@string/clinic_name"
                    android:textColor="@color/colorPrimary"
                    app:fontFamily="@font/jf_flat"
                    app:layout_constraintBottom_toBottomOf="@+id/clinic_image"
                    app:layout_constraintStart_toEndOf="@+id/clinic_image"
                    app:layout_constraintTop_toTopOf="@+id/clinic_image" />

                <ImageView
                    android:id="@+id/clinic_image"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_margin="3dp"
                    android:src="@drawable/im_offer_test"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/textView15"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="3dp"
                    android:ellipsize="end"
                    android:gravity="center"
                    android:text="المرجان الماسيه"
                    app:fontFamily="@font/jf_flat"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/clinic_image" />

            </androidx.constraintlayout.widget.ConstraintLayout>


            <View
                android:layout_width="3dp"
                android:layout_height="match_parent"
                android:background="@color/colorPrimary" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingBottom="5dp">

                <TextView
                    android:id="@+id/textView9"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:ellipsize="end"
                    android:gravity="start|center_vertical"
                    android:text="@string/offer_number"
                    android:textColor="@color/colorPrimary"
                    app:fontFamily="@font/jf_flat"
                    app:layout_constraintBottom_toBottomOf="@+id/department_image"
                    app:layout_constraintStart_toEndOf="@+id/department_image"
                    app:layout_constraintTop_toTopOf="@+id/department_image" />

                <ImageView
                    android:id="@+id/department_image"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_margin="3dp"
                    android:src="@drawable/ic_departments"
                    android:tint="@color/colorPrimary"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/textView16"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="3dp"
                    android:ellipsize="end"
                    android:gravity="center"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:text="الاسنان"
                    app:fontFamily="@font/jf_flat"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/department_image" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <View
                android:layout_width="3dp"
                android:layout_height="match_parent"
                android:background="@color/colorPrimary" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingBottom="5dp">

                <TextView
                    android:id="@+id/textView20"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_marginEnd="5dp"
                    android:ellipsize="end"
                    android:gravity="start|center_vertical"
                    android:text="@string/location"
                    android:textColor="@color/colorPrimary"
                    app:fontFamily="@font/jf_flat"
                    app:layout_constraintBottom_toBottomOf="@+id/location_image"
                    app:layout_constraintStart_toEndOf="@+id/location_image"
                    app:layout_constraintTop_toTopOf="@+id/location_image" />

                <ImageView
                    android:id="@+id/location_image"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_margin="3dp"
                    android:src="@drawable/ic_location"
                    android:tint="@color/colorPrimary"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/textView21"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="3dp"
                    android:ellipsize="end"
                    android:gravity="center"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:text="حي الروضه"
                    app:fontFamily="@font/jf_flat"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/location_image" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:clipToPadding="false"
            android:clipChildren="false"
            android:background="@android:color/transparent"
            android:paddingBottom="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/linearLayout2">

            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:layout_weight="1"
                android:foreground="?attr/selectableItemBackground"
                android:id="@+id/reserve_button"
                android:background="@drawable/bg_button_offer"
                android:drawableEnd="@drawable/ic_reserve"
                android:drawableTint="@color/colorPrimary"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:textAllCaps="false"
                android:text="@string/book_offer"
                android:textColor="@color/colorPrimary"
                app:fontFamily="@font/jf_flat" />

            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:layout_weight="1"
                android:id="@+id/share"
                android:foreground="?attr/selectableItemBackground"
                android:background="@drawable/bg_button_offer"
                android:drawableEnd="@drawable/ic_share_vector"
                android:drawableTint="@color/colorPrimary"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:textAllCaps="false"
                android:text="@string/share_offer"
                android:textColor="@color/colorPrimary"
                app:fontFamily="@font/jf_flat" />
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>