<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <data>
        <variable
            name="clickHandler"
            type="com.senoritasaudi.senoritaprovider.events.OnClickListener" />
    </data>

    <ScrollView
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:layout_width="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#FFFFFF"
            tools:context=".views.LoginActivity">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:id="@+id/progress_parent"
                android:visibility="gone"
                android:clickable="true"
                android:focusable="true"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:elevation="10dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ProgressBar
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:theme="@style/ProgressStyle" />

            </FrameLayout>


            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="wrap_content"
                android:layout_height="120dp"
                android:layout_marginTop="60dp"
                android:adjustViewBounds="true"
                android:src="@drawable/im_logo"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/login"
                android:textColor="@android:color/black"
                android:textSize="18sp"
                android:textStyle="bold"
                app:fontFamily="@font/jf_flat"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView3" />

            <EditText
                android:id="@+id/editText"
                android:layout_width="0dp"
                android:layout_height="45dp"
                android:layout_marginStart="25dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="25dp"
                android:background="@drawable/bg_edit_text"
                android:drawableEnd="@drawable/ic_phone"
                android:drawableRight="@drawable/ic_phone"
                android:drawablePadding="10dp"
                android:foreground="?attr/selectableItemBackground"
                android:gravity="center_vertical|start"
                android:hint="@string/phone_number"
                android:textAlignment="viewStart"
                android:inputType="phone"
                android:paddingStart="15dp"
                android:paddingEnd="15dp"
                android:textSize="15sp"
                app:fontFamily="@font/jf_flat"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView4" />

            <EditText
                android:id="@+id/editText2"
                android:layout_width="0dp"
                android:layout_height="45dp"
                android:layout_marginStart="25dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="25dp"
                android:background="@drawable/bg_edit_text"
                android:drawableEnd="@drawable/ic_password"
                android:drawableRight="@drawable/ic_password"
                android:drawablePadding="10dp"
                android:foreground="?attr/selectableItemBackground"
                android:gravity="center_vertical|start"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:textAlignment="viewStart"
                android:paddingStart="15dp"
                android:paddingEnd="15dp"
                android:textSize="15sp"
                app:fontFamily="@font/jf_flat"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editText" />


            <Button
                android:id="@+id/next_button"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/bg_button"
                android:foreground="?attr/selectableItemBackground"
                android:text="@string/login"
                android:onClick="@{v -> clickHandler.onClick(v)}"
                android:textAllCaps="false"
                android:textColor="@android:color/white"
                android:textSize="17sp"
                app:fontFamily="@font/jf_flat"
                app:layout_constraintEnd_toEndOf="@+id/editText2"
                app:layout_constraintStart_toStartOf="@+id/editText2"
                app:layout_constraintTop_toBottomOf="@+id/editText2" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>